--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku": "git push heroku master"
+    "heroku": "git push heroku master",
+    "postinstall": "link-module-alias"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "@babel/core": "^7.13.15",
     "@babel/node": "^7.13.13",
     "@babel/preset-env": "^7.13.15",
+    "link-module-alias": "^1.2.0",
     "nodemon": "2.0.7"
   },
   "dependencies": {
@@ -26,5 +28,10 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "mongoose": "5.12.3"
+  },
+  "_moduleAliases": {
+    "~utils": "./utils",
+    "~middlewares": "./middlewares",
+    "~models": "./models"
   }
 }
