--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "babel": "nodemon --exec babel-node -- index.js",
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "npm run test --watch",
     "heroku": "git push heroku master",
     "postinstall": "link-module-alias"
   },
@@ -26,12 +27,24 @@
     "@sentry/tracing": "^6.2.5",
     "cors": "^2.8.5",
     "dotenv": "8.2.0",
+    "eslint": "^7.24.0",
     "express": "4.17.1",
-    "mongoose": "5.12.3"
+    "jest": "^26.6.3",
+    "mongoose": "5.12.3",
+    "standard": "^16.0.3"
   },
   "_moduleAliases": {
     "~utils": "./utils",
     "~middlewares": "./middlewares",
     "~models": "./models"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json",
+    "env": {
+      "jest": true
+    }
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
