chore(env): setting multiple NODE_ENV

--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "babel": "nodemon --exec babel-node -- index.js",
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "test": "jest",
+    "dev": "NODE_ENV=development nodemon --exec babel-node -- index.js",
+    "start": "NODE_ENV=production node index.js",
+    "test": "NODE_ENV=test jest --verbose",
     "test:watch": "npm run test --watch",
     "heroku": "git push heroku master",
     "postinstall": "link-module-alias"
