--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 // .babelrc
 {
-  "presets": ["@babel/preset-env"]
+  "presets": ["@babel/preset-env"],
+  "plugins": [
+    ["@babel/plugin-transform-runtime",
+      {
+        "regenerator": true
+      }
+    ]
+  ]
 }
