--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "NODE_ENV=development nodemon --exec babel-node -- index.js",
     "start": "NODE_ENV=production node index.js",
     "test": "NODE_ENV=test jest --verbose",
-    "test:watch": "npm run test --watch",
+    "test:watch": "npm run test -- --watch",
     "heroku": "git push heroku master",
     "postinstall": "link-module-alias"
   },
@@ -17,11 +17,14 @@
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/node": "^7.13.13",
+    "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "link-module-alias": "^1.2.0",
-    "nodemon": "2.0.7"
+    "nodemon": "2.0.7",
+    "supertest": "^6.1.3"
   },
   "dependencies": {
+    "@babel/runtime": "^7.13.10",
     "@sentry/node": "^6.2.5",
     "@sentry/tracing": "^6.2.5",
     "cors": "^2.8.5",
