--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon --exec babel-node -- index.js",
     "start": "NODE_ENV=production node index.js",
-    "test": "NODE_ENV=test jest --verbose",
+    "test": "NODE_ENV=test jest --verbose --silent",
     "test:watch": "npm run test -- --watch",
     "heroku": "git push heroku master",
     "postinstall": "link-module-alias"
