--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "_moduleAliases": {
     "~utils": "./utils",
     "~middlewares": "./middlewares",
-    "~models": "./models"
+    "~models": "./models",
+    "~controllers": "./controllers"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json",
