--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon --exec babel-node -- index.js",
     "start": "NODE_ENV=production node index.js",
-    "test": "NODE_ENV=test jest --verbose --silent",
+    "test": "NODE_ENV=test PORT=8080 jest --verbose",
     "test:watch": "npm run test -- --watch",
     "heroku": "git push heroku master",
     "postinstall": "link-module-alias"
@@ -27,12 +27,14 @@
     "@babel/runtime": "^7.13.10",
     "@sentry/node": "^6.2.5",
     "@sentry/tracing": "^6.2.5",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "8.2.0",
     "eslint": "^7.24.0",
     "express": "4.17.1",
     "jest": "^26.6.3",
     "mongoose": "5.12.3",
+    "mongoose-unique-validator": "^2.0.3",
     "standard": "^16.0.3"
   },
   "_moduleAliases": {
