--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^7.24.0",
     "express": "4.17.1",
     "jest": "^26.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "5.12.3",
     "mongoose-unique-validator": "^2.0.3",
     "standard": "^16.0.3"
