--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon --exec babel-node -- index.js",
     "start": "NODE_ENV=production node index.js",
+    "start:test": "NODE_ENV=test node index.js",
     "test": "NODE_ENV=test PORT=8080 jest --verbose",
     "test:watch": "npm run test -- --watch",
     "heroku": "git push heroku master",
